<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/login_global_padding"
    tools:context=".ui.login.LoginActivity">

    <ProgressBar
        android:id="@+id/progress_bar"
        style="@style/ProgressBarStyle"
        android:layout_width="@dimen/login_progress_size"
        android:layout_height="@dimen/login_progress_size"
        android:layout_gravity="center"
        android:indeterminateTint="@color/purple_700" />

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/welcome_text_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/login_welcome_title_text"
            android:textColor="@color/purple_700"
            android:textSize="@dimen/login_title_text_size" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/ok_text_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/login_message_margin"
            android:padding="@dimen/login_message_margin"
            android:textColor="@color/teal_700"
            android:textSize="@dimen/login_message_text_size"
            tools:text="It's Ok" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/error_text_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/login_message_margin"
            android:padding="@dimen/login_message_margin"
            android:textColor="@color/red"
            android:textSize="@dimen/login_message_text_size"
            tools:text="Unknown Error" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/email_input"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/email_edit_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/login_email_edit_hint"
                android:inputType="textEmailAddress" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/password_input"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/password_edit_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/login_password_edit_hint"
                android:inputType="textPassword" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/second_password_input"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/second_password_edit_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/login_second_password_edit_hint"
                android:inputType="textPassword" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/error_login_button"
            style="@style/BlueButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/login_error_button_text" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/error_registration_button"
            style="@style/BlueButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/login_error_button_text" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/enter_button"
            style="@style/BlueButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/login_enter_button_text" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/exit_button"
            style="@style/BlueButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/login_exit_button_text" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/register_button"
            style="@style/BlueButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/login_register_button_text" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/registration_button"
            style="@style/BlueButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/login_registration_button_text" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/forgot_password_button"
            style="@style/BlueButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/login_forgot_password_button_text" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/return_button"
            style="@style/BlueButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/login_return_button_text" />

    </androidx.appcompat.widget.LinearLayoutCompat>
</FrameLayout>
